Misc: Small service IDs

--- a/preamble.tex
+++ b/preamble.tex
@@ -267,6 +267,7 @@
 \newcommand*{\Cslotseconds}{\mathsf{P}}
 \newcommand*{\Cauthqueuesize}{\mathsf{Q}}
 \newcommand*{\Crotationperiod}{\mathsf{R}}
+\newcommand*{\Cminpublicindex}{\mathsf{S}}
 \newcommand*{\Cmaxpackagexts}{\mathsf{T}}
 \newcommand*{\Cassurancetimeoutperiod}{\mathsf{U}}
 \newcommand*{\Cvalcount}{\mathsf{V}}
@@ -555,6 +556,7 @@
 \newcommand*{\ps¬manager}{m}
 \newcommand*{\ps¬assigners}{\mathbf{a}}
 \newcommand*{\ps¬delegator}{v}
+\newcommand*{\ps¬registrar}{r}
 \newcommand*{\ps¬alwaysaccers}{\mathbf{z}}
 
 %%%%%%%%%%%%%%
@@ -725,6 +727,7 @@
 \newcommand*{\privileges}{\chi}
 \newcommand*{\manager}{\privileges_M}
 \newcommand*{\delegator}{\privileges_V}
+\newcommand*{\registrar}{\privileges_R}
 \newcommand*{\assigners}{\privileges_A}
 \newcommand*{\alwaysaccers}{\privileges_Z}
 
