--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -269,6 +269,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\Cslotseconds = 6$] The slot period, in seconds. See equation \ref{sec:epochsandslots}.
   \item[$\Cauthqueuesize = 80$] The number of items in the authorizations queue. See equation \ref{eq:authstatecomposition}.
   \item[$\Crotationperiod = 10$] The rotation period of validator-core assignments, in timeslots. See sections \ref{sec:coresandvalidators} and \ref{sec:workreportguarantees}.
+  \item[$\Cminpublicindex = 2^{16}$] The minimum public service index. Services of indices below these may only be created by the Registrar. See equation \ref{eq:newserviceindex}.
   \item[$\Cmaxpackagexts = 128$] The maximum number of extrinsics in a work-package. See equation \ref{eq:limitworkpackagebandwidth}.
   \item[$\Cassurancetimeoutperiod = 5$] The period in timeslots after which reported but unavailable work may be replaced. See equation \ref{eq:reportspostguaranteesdef}.
   \item[$\Cvalcount = 1023$] The total number of validators.
