--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -161,15 +161,21 @@ We may then define a third dependent term $\sa¬minbalance$, the minimum, or \em
 
 
 \subsection{Service Privileges}
-\Jam includes the ability to bestow privileges on a number of services. The portion of state in which this is held is denoted $\privileges$ and includes four kinds of privilege. The first, $\manager$, is the index of the \emph{manager} service which is the service able to effect an alteration of $\privileges$ from block to block as well as bestow services with storage deposit credits. The following, $\assigners$, are the service indices capable of altering the authorizer queue $\authqueue$, one for each core. The next, $\delegator$, is able to set $\stagingset$.
+\Jam includes the ability to bestow privileges on a number of services. The portion of state in which this is held is denoted $\privileges$ and includes four kinds of privilege. The first, $\manager$, is the index of the \emph{manager} service which is the service able to effect an alteration of $\privileges$ from block to block as well as bestow services with storage deposit credits. The next, $\delegator$, is able to set $\stagingset$. Then $\registrar$ alone is able to create new service accounts with indices in the protected range. The following, $\assigners$, are the service indices capable of altering the authorizer queue $\authqueue$, one for each core.
 
 Finally, $\alwaysaccers$ is a small dictionary containing the indices of services which automatically accumulate in each block together with a basic amount of gas with which each accumulates. Formally:
 \begin{align}
   \label{eq:privilegesspec}
-  \privileges \equiv \tuple{
-    \isa{\manager}{\serviceid} ,
-    \isa{\assigners}{\sequence[\Ccorecount]{\serviceid}} ,
-    \isa{\delegator}{\serviceid} ,
-    \isa{\alwaysaccers}{\dictionary{\serviceid}{\gas}}
-  }
+  \privileges &\equiv \tuple{
+    \manager,
+    \delegator,
+    \registrar,
+    \assigners,
+    \alwaysaccers
+  }\\
+  \manager &\in \serviceid \ ,\qquad
+  \delegator \in \serviceid \ ,\qquad
+  \registrar \in \serviceid \\
+  \assigners &\in \sequence[\Ccorecount]{\serviceid} \ ,\qquad
+  \alwaysaccers \in \dictionary{\serviceid}{\gas}
 \end{align}
