--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -221,8 +221,9 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\privileges$] The privileged service indices. See equation \ref{eq:privilegesspec}.
   \begin{description}
     \item[$\manager$] The index of the blessed service. See equation \ref{eq:accountspostaccdef}.
-    \item[$\delegator$] The index of the designate service. See equation \ref{eq:accountspostaccdef}.
     \item[$\assigners$] The indices of the services able to assign each core's authorizer queue. See equation \ref{eq:accountspostaccdef}.
+    \item[$\delegator$] The index of the designate service. See equation \ref{eq:accountspostaccdef}.
+    \item[$\registrar$] The index of the registrar service. See equation \ref{eq:accountspostaccdef}.
     \item[$\alwaysaccers$] The always-accumulate service indices and their basic gas allowance. See equation \ref{eq:accountspostaccdef}.
   \end{description}
   \item[$\activity$] The activity statistics for the validators. See equation \ref{eq:activityspec}.
