--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -58,7 +58,7 @@ The state serialization is then defined as the dictionary built from the amalgam
     } \;, \\
     &&C(11) &\mapsto \encode[4]{\thetime} \;, \\
     &&C(12) &\mapsto \encode{
-      \encode[4]{\manager, \assigners, \delegator},
+      \encode[4]{\manager, \assigners, \delegator, \registrar},
       \alwaysaccers
     } \;, \\
     &&C(13) &\mapsto \encode{
