--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -221,8 +221,9 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\privileges$] The privileged service indices. See equation \ref{eq:privilegesspec}.
   \begin{description}
     \item[$\manager$] The index of the blessed service. See equation \ref{eq:accountspostaccdef}.
-    \item[$\delegator$] The index of the designate service. See equation \ref{eq:accountspostaccdef}.
     \item[$\assigners$] The indices of the services able to assign each core's authorizer queue. See equation \ref{eq:accountspostaccdef}.
+    \item[$\delegator$] The index of the designate service. See equation \ref{eq:accountspostaccdef}.
+    \item[$\registrar$] The index of the registrar service. See equation \ref{eq:accountspostaccdef}.
     \item[$\alwaysaccers$] The always-accumulate service indices and their basic gas allowance. See equation \ref{eq:accountspostaccdef}.
   \end{description}
   \item[$\activity$] The activity statistics for the validators. See equation \ref{eq:activityspec}.
@@ -269,6 +270,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\Cslotseconds = 6$] The slot period, in seconds. See equation \ref{sec:epochsandslots}.
   \item[$\Cauthqueuesize = 80$] The number of items in the authorizations queue. See equation \ref{eq:authstatecomposition}.
   \item[$\Crotationperiod = 10$] The rotation period of validator-core assignments, in timeslots. See sections \ref{sec:coresandvalidators} and \ref{sec:workreportguarantees}.
+  \item[$\Cminpublicindex = 2^{16}$] The minimum public service index. Services of indices below these may only be created by the Registrar. See equation \ref{eq:newserviceindex}.
   \item[$\Cmaxpackagexts = 128$] The maximum number of extrinsics in a work-package. See equation \ref{eq:limitworkpackagebandwidth}.
   \item[$\Cassurancetimeoutperiod = 5$] The period in timeslots after which reported but unavailable work may be replaced. See equation \ref{eq:reportspostguaranteesdef}.
   \item[$\Cvalcount = 1023$] The total number of validators.
