--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -218,7 +218,7 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
       } = \psX \\
       \local¬manpost &= \local¬acc(m)_\ao¬poststate \\
       \tup{\ps¬manager'\!,\ps¬alwaysaccers'} &=
-        \local¬manpost_{\tup{\ps¬manager, \ps¬registrar, \ps¬alwaysaccers}} \\
+        \local¬manpost_{\tup{\ps¬manager, \ps¬alwaysaccers}} \\
       \forall c \in \coreindex :
         \ps¬assigners'\sub{c} &= R(
           \ps¬assigners\sub{c},
