--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -358,9 +358,9 @@ Given the result of the top-level $\accseq$, we may define the posterior state $
   \!\!\!\!\!\\
   \label{eq:finalstateaccumulation}
   &\tup{
-    \local¬numberofreportsaccumulated, \psX', b, \local¬servicegasused
+    \local¬numberofreportsaccumulated, \psX', \mathbf{b}, \local¬servicegasused
   } \equiv \accseq(g, \sq{}, \justbecameavailable^*, \psX, \alwaysaccers) \\
-  &\lastaccout' \equiv \sqorderby{s}{\tup{s, h} \in b} \\
+  &\lastaccout' \equiv \sqorderby{s}{\tup{s, h} \in \mathbf{b}} \\
   \label{eq:accountspostaccdef}
   &\tup{
     \is\ps¬accounts{\accountspostacc},
