--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -360,7 +360,7 @@ Given the result of the top-level $\accseq$, we may define the posterior state $
   &\tup{
     \local¬numberofreportsaccumulated, \psX', \mathbf{b}, \local¬servicegasused
   } \equiv \accseq(g, \sq{}, \justbecameavailable^*, \psX, \alwaysaccers) \\
-  &\lastaccout' \equiv \sqorderby{s}{\tup{s, h} \in \mathbf{b}} \\
+  &\lastaccout' \equiv \sq{\tup{s, h} \in \mathbf{b}} \\
   \label{eq:accountspostaccdef}
   &\tup{
     \is\ps¬accounts{\accountspostacc},
