Order lastaccout before assign to new state (#477)
* correct type for lastaccout state update

* bold b

* Update text/accumulation.tex

---------

Co-authored-by: Gavin Wood <gavin@parity.io>

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -365,8 +365,9 @@ Given the result of the top-level $\accseq$, we may define the posterior state $
   \!\!\!\!\!\\
   \label{eq:finalstateaccumulation}
   &\tup{
-    \local¬numberofreportsaccumulated, \psX', \lastaccout', \local¬servicegasused
+    \local¬numberofreportsaccumulated, \psX', \mathbf{b}, \local¬servicegasused
   } \equiv \accseq(g, \sq{}, \justbecameavailable^*, \psX, \alwaysaccers) \\
+  &\lastaccout' \equiv \sq{\tup{s, h} \in \mathbf{b}} \\
   \label{eq:accountspostaccdef}
   &\tup{
     \is\ps¬accounts{\accountspostacc},
