--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -215,7 +215,7 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
         \bigcup_{s \in \mathbf{s}} \local¬acc(s)_\ao¬provisions
       ) \\
       &\tup{
-        \ps¬accounts, \ps¬stagingset, \ps¬authqueue, \ps¬manager, \ps¬assigners, \ps¬delegator, \ps¬registrar, ¬alwaysaccers
+        \ps¬accounts, \ps¬stagingset, \ps¬authqueue, \ps¬manager, \ps¬assigners, \ps¬delegator, \ps¬registrar, \ps¬alwaysaccers
       } = \psX \\
       \local¬manpost &= \local¬acc(m)_\ao¬poststate \\
       \tup{\ps¬manager'\!,\ps¬alwaysaccers'} &=
