indicate in (4.11) that psi_prime depends additionaly on kappa, lambda, and tau for signature verification (10.3)

--- a/text/overview.tex
+++ b/text/overview.tex
@@ -52,7 +52,7 @@ Much as in the \emph{YP}, we specify $\transitionstate$ as the implication of fo
   \entropy' &\prec \tup{\theheader, \thetime, \entropy} \\
   \activeset' &\prec \tup{\theheader, \thetime, \activeset, \safrole} \\
   \previousset' &\prec \tup{\theheader, \thetime, \previousset, \activeset} \\
-  \disputes' &\prec \tup{\xtdisputes, \disputes} \\
+  \disputes' &\prec \tup{\xtdisputes, \thetime, \activeset, \previousset, \disputes} \\
   \reportspostjudgement &\prec \tup{\xtdisputes, \reports} \label{eq:rhodagger} \\
   \reportspostguarantees &\prec \tup{\xtassurances, \reportspostjudgement} \label{eq:rhoddagger} \\
   \reports' &\prec \tup{\xtguarantees, \reportspostguarantees, \activeset, \thetime'} \label{eq:rhoprime} \\
